--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "main": "index.js",
     "name": "scipm.theme.output.black",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "Change the colours of the output panel",
     "license": "GPL-3.0",
     "repository": {
@@ -35,6 +35,8 @@
                 {"path": ["README.md" ]},
                 {"path": ["package.json" ]},
                 {"path": ["scite", "main.lua" ]}
+            ],
+            "infoProps": [
             ]
         },
         "actions": {}
